# NQHUB

./: .gitignore  CLAUDE.md  FASE2_STATUS.md  MARKET_STATE_PROGRESS_FIX_SUMMARY.md  PROJECT_PLAN.md  PROJECT_PLANv0.md  README.md  README_ASSISTANT.md  SCICHART_SETUP.md  docker-compose.yml  index.html  start-tmux.sh  vite.config.ts
backend/: .env.example  ASSISTANT_STATUS.md  ASSISTANT_TODO.md  Dockerfile.worker  GCS_EXPORT_README.md  IMPLEMENTATION_COMPLETE.md  LP_DETECTOR_V2_SUMMARY.md  README.md  VANNA_CLAUDE_2STAGE_PROPOSAL.md  alembic.ini  analyze_specific_ob.py  check_ob_dates.py  check_snapshot_breakdown.py  enqueue_job.py  enqueue_pending_job.py  pyproject.toml  requirements-ai.txt  requirements-ci.txt  requirements-dev.txt  requirements.txt  setup_test_db.py  test_active_contract_api.py  test_active_contracts.py  test_all_pattern_detectors.py  test_csv_parser.py  test_direct_detector.py  test_distance_to_price.py  test_email_direct.py  test_etl_full.py  test_final_comprehensive.py  test_ict_v2_simple.py  test_importance_score.py  test_lp_nov5_7pm_analysis.py  test_lp_nov6_analysis.py  test_lp_rect5_analysis.py  test_lp_rect6_analysis.py  test_lp_rect6_candle_details.py  test_lp_session_complete.py  test_lp_zones.py  test_market_state_flow.py  (+17 more)
backend/alembic/: env.py
backend/alembic/versions/: 20251030_1154-e5719b486310_create_users_and_invitations_tables.py  20251031_1022-8d5b0d19c24e_add_password_reset_tokens_table.py  20251102_0904-0cac37df50d1_create_candlestick_tables.py  20251102_0904-b215073e64fd_create_market_data_ticks_table.py  20251102_0905-c32f6b61196a_create_auxiliary_tables.py  20251102_0948-0ab4b7e66309_create_etl_jobs_and_candle_coverage_.py  20251102_1640-73668c471717_create_etl_job_logs_table.py  20251102_1641-d207e6ad07eb_add_detailed_progress_fields_to_etl_jobs.py  20251102_1740-1999c1774198_add_status_detail_to_etl_jobs.py  20251103_1438-f1a8f69db2a6_create_active_contracts_table.py  20251104_1354-8ab5a70c73df_add_tick_hash_for_duplicate_prevention.py  20251104_1405-d494630c6cc3_add_detailed_progress_tracking_fields_.py  20251204_2152-b8b739263c73_create_pattern_detection_tables.py  20251209_1630-2b8f3542b490_add_ict_fields_to_detected_fvgs.py  20251209_1654-8f06482e1048_add_last_checked_time_to_detected_fvgs.py  20251213_1915-eb92517323ec_create_assistant_tables.py  (+10 more)
backend/app/: config.py  main.py
backend/docker/: docker-compose.monitoring.yml
backend/scripts/: check_gpu.sh  export_openapi_spec.py  force_start_workers.sh  generate_invitation.py  init_superuser.py  load_data.py  validate_asyncapi.py
backend/tests/: conftest.py  test_alert_service.py  test_apex_validator.py  test_assistant.py  test_assistant_tools.py  test_auth_endpoints.py  test_backtesting_endpoints.py  test_bot_management.py  test_contract_backtesting.py  test_contracts.py  test_data_export.py  test_data_loader.py  test_data_platform.py  test_data_platform_simple.py  test_five_domains_migrations.py  test_ict_detectors.py  test_ict_v2.py  test_live_trading_endpoints.py  test_main.py  test_market_state.py  test_metrics.py  test_metrics_simple.py  test_nqhub_strategy.py  test_orderflow_indicators.py  test_pattern_detection_simple.py  test_performance_metrics.py  test_screener.py  test_security.py  test_simple.py  test_strategies.py  test_trade_journal.py  test_websocket_basic.py  test_websocket_server.py
nqhub-research/: pyproject.toml
nqhub-research/nqhub/: __init__.py
(+587 files in other folders)
