[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nqhub-research"
version = "0.1.0"
description = "NQHUB Research Package - Trading strategies and analysis for NQ futures"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "NQHUB Team", email = "team@nqhub.com" }
]
keywords = ["trading", "futures", "nq", "backtesting", "strategy", "quantitative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "ta>=0.10.0",  # Technical Analysis library
    "yfinance>=0.2.0",  # For fetching market data
]

[project.optional-dependencies]
ml = [
    "tensorflow>=2.13.0",
    "torch>=2.0.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
]
rl = [
    "stable-baselines3>=2.0.0",
    "gymnasium>=0.29.0",
]
viz = [
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
    "seaborn>=0.12.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
all = [
    "nqhub-research[ml,rl,viz,dev]"
]

[tool.hatch.build]
include = [
    "nqhub/**/*.py",
    "nqhub/**/*.pyx",
    "nqhub/**/*.pxd",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true